# project2.1_Perfilova

./: .gitignore  Makefile  README.md  pyproject.toml
src/primitive_db/: core.py  decorators.py  engine.py  main.py  utils.py
