[project]
name = "project2-1-perfilova"
version = "0.1.1"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)",
    "prettytable (>=3.17.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[dependency-groups]
dev = [
    "ruff (>=0.15.1,<0.16.0)"
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
